--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 logging.level.org.apache.coyote.http11=debug 
 #multipart? ??? ?? ?? ?? ?? ?? ?? ???
 spring.servlet.multipart.enabled=true
+
+file.dir=/Users/apple/Documents/learningSpring/upload/file/
